fix: Remove 'justify-content: center' from div.listsContainer to allow full content visibility when scrolling to the left on x-axis overflow

--- a/src/app/styles/watchlistMain.module.scss
+++ b/src/app/styles/watchlistMain.module.scss
@@ -36,8 +36,6 @@ $minor-color-background: rgba(197, 177, 249, 0.1);
   .listsContainer {
     display: flex;
     // border: 2px solid green;
-    justify-content: center;
-    // 兇手就是上面這行！讓最左邊被遮住！！！
     overflow-x: auto;
     width: 100%;
     // max-width: 1500px;
